# community-tv-software

./: .gitignore  Cargo.toml  DEPLOYMENT.md  QUICKSTART.md  README.md  config.example.toml  install-autostart.bat  setup-autostart.ps1
src/: main.rs
